--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "israelcustodio/ecommerce",
+    "description": "Sistema E-Commerce",
     "authors": [
         {
             "name": "Unique Tecnologia",
